Added more stuff

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <!-- Your Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Your Name</a>
+    <nav class="navbar navbar-expand-lg navbar-dark ">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav mx-auto ">
                 <li class="nav-item active">
                     <a class="nav-link" href="#about">About</a>
                 </li>
@@ -34,33 +34,54 @@
         </div>
     </nav>
 
+    <hr />
+
     <!-- Main Content -->
     <div class="container mt-5">
 
-        <header class="text-center">
-            <h1 class="display-4">Your Name</h1>
-            <p class="lead">Web Developer</p>
-        </header>
+        <div class="row">
+            <div class="col-md-12">
+                <header class="text-center">
+                    <p class="text-left-md">About me</p>
+                    <p class="lead">I am Nikolaos-Marios Kontos, a senior at computer science, university of Ioannina.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </header>
+            </div>
 
-        <section id="about" class="my-5">
-            <h2 class="text-center mb-4">About Me</h2>
-            <p>Welcome to my GitHub Pages! I am a web developer passionate about creating awesome web experiences.</p>
-        </section>
+            
 
-        <section id="portfolio" class="my-5">
-            <h2 class="text-center mb-4">Portfolio</h2>
-            <!-- Add your portfolio items here -->
-        </section>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="projects">
+                        <section id="Apod" class="my-5">
+                            <h2 class="text-center mb-4">Apod</h2>
+                            <p class="text-center">Astronomical picture of the day</p>
+                            <!-- Add your portfolio items here -->
+                        </section>
+                    </div>
+                </div>
 
-        <section id="contact" class="my-5">
-            <h2 class="text-center mb-4">Contact Me</h2>
-            <p>Feel free to reach out to me via email at <a href="mailto:your.email@example.com">your.email@example.com</a>.</p>
-        </section>
+                <div class="col-md-4">
+                    <section id="Weather app" class="my-5">
+                        <h2 class="text-center mb-4">Weather app</h2>
+                        <p class="text-center">A simple weather app</p>
+                        <!-- Add your portfolio items here -->
+                    </section>
+                </div>
 
+                <div class="col-md-4">
+                    <section id="Apod" class="my-5">
+                        <h2 class="text-center mb-4">Apod</h2>
+                        <p class="text-center">Astronomical picture of the day</p>
+                        <!-- Add your portfolio items here -->
+                    </section>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light text-center py-3">
+    <footer class="text-light text-center py-3">
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
 
