--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+
     <!-- Your Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -22,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto ">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#portfolio">Portfolio</a>
@@ -43,20 +46,19 @@
             <div class="col-md-12">
                 <header class="text-center">
                     <p class="text-left-md">About me</p>
-                    <p class="lead">I am Nikolaos-Marios Kontos, a senior at computer science, university of Ioannina.</p>
+                    <p class="lead">Hello, I am Nikolaos-Marios Kontos, a senior at computer science, university of Ioannina.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </header>
             </div>
-
-            
 
             <div class="row">
                 <div class="col-md-4">
                     <div class="projects">
                         <section id="Apod" class="my-5">
                             <h2 class="text-center mb-4">Apod</h2>
-                            <p class="text-center">Astronomical picture of the day</p>
-                            <!-- Add your portfolio items here -->
+                            <p>
+                                <a href="/pages/apod.html" class="text-center">Astronomical picture of the day</a>
+                            </p>
                         </section>
                     </div>
                 </div>
@@ -65,7 +67,6 @@
                     <section id="Weather app" class="my-5">
                         <h2 class="text-center mb-4">Weather app</h2>
                         <p class="text-center">A simple weather app</p>
-                        <!-- Add your portfolio items here -->
                     </section>
                 </div>
 
@@ -73,15 +74,23 @@
                     <section id="Apod" class="my-5">
                         <h2 class="text-center mb-4">Apod</h2>
                         <p class="text-center">Astronomical picture of the day</p>
-                        <!-- Add your portfolio items here -->
                     </section>
                 </div>
             </div>
         </div>
     </div>
 
+
+    <hr />
     <!-- Footer -->
+
+    <div class='social-icons'>
+        <a href="instagram.com/nikontos" class="icon"><i class="fa-brands fa-github"></i></a>
+    </div>
+
     <footer class="text-light text-center py-3">
+
+
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
 
