Fixed Apod hrem with centered text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto ">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">About</a>
+                    <a class="nav-link text" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#portfolio">Portfolio</a>
@@ -53,7 +53,7 @@
 
             <div class="row">
                 <div class="col-md-4">
-                    <div class="projects">
+                    <div class="projects text-center">
                         <section id="Apod" class="my-5">
                             <h2 class="text-center mb-4">Apod</h2>
                             <p>
