Social icons + apod picture

--- a/index.html
+++ b/index.html
@@ -25,14 +25,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto ">
                 <li class="nav-item active">
-                    <a class="nav-link text" href="index.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#portfolio">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
-                </li>
+                    <a class="nav-link text" href="/index.html">Home</a>
+                </li>           
             </ul>
         </div>
     </nav>
@@ -45,9 +39,10 @@
         <div class="row">
             <div class="col-md-12">
                 <header class="text-center">
-                    <p class="text-left-md">About me</p>
-                    <p class="lead">Hello, I am Nikolaos-Marios Kontos, a senior at computer science, university of Ioannina.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>
+                        I am Nikolaos-Marios Kontos, senior of the department of Compuer Science and Engineering at the University of Ioannina. From a very young age I have been involved with computers and technology.
+                        I really enjoy thinking of solutions, either to computer science/programming problems or in everyday challenges. When a problem gives me a challenge, I don't rest until I get over it and break the gordian knot. I like to challenge and train my brain. What would charectirize me is my analytical thinking, methodicality, organization and attention to details.
+                    </p>             
                 </header>
             </div>
 
@@ -84,14 +79,18 @@
     <hr />
     <!-- Footer -->
 
-    <div class='social-icons'>
-        <a href="instagram.com/nikontos" class="icon"><i class="fa-brands fa-github"></i></a>
+    <div class='social-icons text-center'>
+        <a href="https://github.com/nikontos" style="color:black" class="icon"><i class="fa-brands fa-github"></i></a>
+        <a href="mailto:nikontos.dev@gmail.com" style="color:black" class="icon"><i class="fa-brands fa-google"></i></a>
+        <a href="https://www.linkedin.com/in/nikontos/" style="color:black" class="icon"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="instagram.com/nikontos" style="color:black" class="icon"><i class="fa-brands fa-instagram"></i></a>
+
     </div>
 
     <footer class="text-light text-center py-3">
 
 
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Nikolaos-Marios Kontos. All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap JS and Popper.js (optional) -->
