--- a/pages/apod.html
+++ b/pages/apod.html
@@ -25,13 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto ">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#portfolio">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link text" href="../index.html">Home</a>
                 </li>
             </ul>
         </div>
@@ -54,13 +48,17 @@
 
     <div class="row">
         <div class="col-md-12">
-            <img id="image" alt="Image" class="text-center">
+            <div class="container mt-5 text-center">
+                <img id="image" alt="Image">
+            </div>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12">
-            <p id="description" class="text-center"></p>
+            <div class="container mt-5">
+                <p id="description" class="text-center"></p>
+            </div>
         </div>
     </div>
 
@@ -69,14 +67,17 @@
     <hr />
     <!-- Footer -->
 
-    <div class='social-icons'>
-        <a href="instagram.com/nikontos" class="icon"><i class="fa-brands fa-github"></i></a>
+    <div class='social-icons text-center'>
+        <a href="https://github.com/nikontos" style="color:black" class="icon"><i class="fa-brands fa-github"></i></a>
+        <a href="mailto:nikontos.dev@gmail.com" style="color:black" class="icon"><i class="fa-brands fa-google"></i></a>
+        <a href="https://www.linkedin.com/in/nikontos/" style="color:black" class="icon"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="instagram.com/nikontos" style="color:black" class="icon"><i class="fa-brands fa-instagram"></i></a>
     </div>
 
     <footer class="text-light text-center py-3">
 
 
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Nikolaos-Marios Kontos. All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap JS and Popper.js (optional) -->
