--- a/pages/apod.html
+++ b/pages/apod.html
@@ -71,7 +71,7 @@
         <a href="https://github.com/nikontos" style="color:black" class="icon"><i class="fa-brands fa-github"></i></a>
         <a href="mailto:nikontos.dev@gmail.com" style="color:black" class="icon"><i class="fa-brands fa-google"></i></a>
         <a href="https://www.linkedin.com/in/nikontos/" style="color:black" class="icon"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="instagram.com/nikontos" style="color:black" class="icon"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.instagram.com/nikontos" style="color:black" class="icon"><i class="fa-brands fa-instagram"></i></a>
     </div>
 
     <footer class="text-light text-center py-3">
